--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -1,1 +1,4 @@
-<p>img works!</p>
+<img [src]="img" alt="imagen chida" width="200" *ngIf="img; else elseImg">
+<ng-template #elseImg>
+  <img src="../../assets/images/default.png" alt="default">
+</ng-template>
