--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <input type="text" [(ngModel)]="imgParent">
 
-<app-img [img]="imgParent"></app-img>
+<app-img (loaded)="onLoaded($event)" [img]="imgParent"></app-img>
