--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <input type="text" [(ngModel)]="imgParent">
 
 <app-img (loaded)="onLoaded($event)" [img]="imgParent"></app-img>
+
+<app-product *ngFor="let product of products" [product]="product"></app-product>
