--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 <input type="text" [(ngModel)]="imgParent">
 
-<app-img (loaded)="onLoaded($event)" [img]="imgParent"></app-img>
+<button (click)="toggleImage()">Toggle image</button>
+
+<p> {{ showImage }} </p>
+
+<app-img
+  *ngIf="showImage"
+  (loaded)="onLoaded($event)"
+  [changeImg]="imgParent"
+>
+</app-img>
 
 <app-product *ngFor="let product of products" [product]="product"></app-product>
