--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,1 @@
-<input type="text" [(ngModel)]="imgParent">
-
-<button (click)="toggleImage()">Toggle image</button>
-
-<p> {{ showImage }} </p>
-
-<app-img
-  *ngIf="showImage"
-  (loaded)="onLoaded($event)"
-  [changeImg]="imgParent"
->
-</app-img>
-
-<app-product *ngFor="let product of products" [product]="product"></app-product>
+<app-products-list></app-products-list>
