--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,4 @@
 <app-img [src]="product.image"></app-img>
 <h2>${{ product.price }}</h2>
 <p>{{ product.name }}</p>
+<button (click)="onAddToCart()">Add to cart</button>
