--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,4 +1,4 @@
 <app-img [src]="product.image"></app-img>
-<h2>${{ product.price }}</h2>
+<h2>{{ product.price | currency: 'MXN' }}</h2>
 <p>{{ product.title }}</p>
 <button (click)="onAddToCart()">Add to cart</button>
