--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -1,5 +1,7 @@
 <p>Cantidad: {{ myShoppingCart.length }}</p>
-<p>Total: ${{ total }}</p>
+<p>Total: {{ total | currency: 'MXN' }}</p>
+<p>Today: {{ today | date: 'short' }}</p>
+<p>Otra fecha: {{ date | date:'full' }}</p>
 <div class="products--grid">
   <app-product
     *ngFor="let product of products"
