--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -1,7 +1,11 @@
 <p>Cantidad: {{ myShoppingCart.length }}</p>
 <p>Total: {{ total | currency: 'MXN' }}</p>
 <p>Today: {{ today | date: 'short' }}</p>
+<p>Time ago: {{ today | timeAgo }}</p>
 <p>Otra fecha: {{ date | date:'full' }}</p>
+<p>Time ago 2: {{ date | timeAgo }}</p>
+<p>{{ 'aeiou' | replaceVowelsForNumbers }}</p>
+<p>{{ 'AEIOU' | replaceVowelsForNumbers }}</p>
 <div class="products--grid">
   <app-product
     *ngFor="let product of products"
